[metadata]
name = natural-imputation
version = 0.1.0
author = Ted Fisher
description = NaturalImputation: a simple but effective target-driven imputation method for Logistic Regression
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = naturalimputation
packages = find:
python_requires = >=3.11
install_requires =
    numpy

[options.packages.find]
where = naturalimputation